Reimplemented basic conversation data in fragments

--- a/app/src/main/res/layout/fragment_insights_summary.xml
+++ b/app/src/main/res/layout/fragment_insights_summary.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="0 messages have been loaded"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -20,7 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="first message: [DATE]"
         app:layout_constraintTop_toBottomOf="@+id/insights_message_count"
         />
 
@@ -29,7 +27,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="last message: [DATE]"
+        app:layout_constraintTop_toBottomOf="@+id/insights_first_message_date"
+        />
+
+    <TextView
+        android:id="@+id/insights_breakdown_by_sender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/insights_first_message_date"
         />
 
