--- a/app/src/main/res/layout/fragment_insights_summary.xml
+++ b/app/src/main/res/layout/fragment_insights_summary.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/insights_message_count"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -16,6 +17,7 @@
 
     <TextView
         android:id="@+id/insights_first_message_date"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -32,10 +34,11 @@
 
     <TextView
         android:id="@+id/insights_breakdown_by_sender"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/insights_first_message_date"
+        app:layout_constraintTop_toBottomOf="@+id/insights_last_message_date"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
