--- a/app/src/main/res/layout/fragment_insights_breakdown.xml
+++ b/app/src/main/res/layout/fragment_insights_breakdown.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.InsightsBreakdownFragment">
 
     <TableLayout
+        android:id="@+id/breakdown_daily"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
 
         <!-- First Row -->
         <TableRow
@@ -95,4 +98,4 @@
 
     </TableLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
