--- a/app/src/main/res/layout/fragment_insights_summary.xml
+++ b/app/src/main/res/layout/fragment_insights_summary.xml
@@ -33,12 +33,21 @@
         />
 
     <TextView
-        android:id="@+id/insights_breakdown_by_sender"
+        android:id="@+id/insights_averages"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/insights_last_message_date"
+        />
+
+    <TextView
+        android:id="@+id/insights_breakdown_by_sender"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/insights_averages"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
