Implemented basic monthly breakdown

--- a/app/src/main/res/layout/fragment_insights_breakdown.xml
+++ b/app/src/main/res/layout/fragment_insights_breakdown.xml
@@ -98,4 +98,11 @@
 
     </TableLayout>
 
+    <ScrollView
+        android:id="@+id/breakdown_monthly"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/breakdown_daily">
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
