--- a/app/src/main/res/layout/fragment_insights_breakdown.xml
+++ b/app/src/main/res/layout/fragment_insights_breakdown.xml
@@ -102,6 +102,7 @@
         android:id="@+id/breakdown_monthly"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/breakdown_daily">
     </ScrollView>
 
