--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -47,5 +47,14 @@
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/load_button" />
 
+    <Button
+        android:id="@+id/load_previous_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/load_previous_button_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="10dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
