--- a/app/src/main/res/layout-land/fragment_insights_breakdown.xml
+++ b/app/src/main/res/layout-land/fragment_insights_breakdown.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.InsightsBreakdownFragment">
+    tools:context=".fragments.InsightsTrendsFragment">
 
     <TableRow
         android:layout_width="match_parent"
