--- a/app/src/main/res/layout/fragment_insights_breakdown.xml
+++ b/app/src/main/res/layout/fragment_insights_breakdown.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.InsightsBreakdownFragment">
+    tools:context=".fragments.InsightsTrendsFragment">
 
     <hr.tvz.android.whatsappinsights.model.HeaderTextView
         android:id="@+id/breakdown_daily_header"
