--- a/app/src/main/res/layout/fragment_insights_records.xml
+++ b/app/src/main/res/layout/fragment_insights_records.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.InsightsRecordsFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.InsightsHighlightsFragment"
+    android:padding="16dp">
 
+    <hr.tvz.android.whatsappinsights.model.HeaderTextView
+        android:id="@+id/records_top5_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Top 5 days"
+        app:layout_constraintTop_toTopOf="parent"/>
     <TextView
         android:id="@+id/records_top5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/records_top5_header">
     </TextView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
