--- a/app/src/main/res/layout/fragment_insights_records.xml
+++ b/app/src/main/res/layout/fragment_insights_records.xml
@@ -8,15 +8,28 @@
     android:padding="16dp">
 
     <hr.tvz.android.whatsappinsights.model.HeaderTextView
-        android:id="@+id/records_top5_header"
+        android:id="@+id/highlights_topDays_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/records_top_days"
         app:layout_constraintTop_toTopOf="parent"/>
     <TableLayout
-        android:id="@+id/records_top5"
+        android:id="@+id/highlights_topDays"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/records_top5_header"/>
+        app:layout_constraintTop_toBottomOf="@id/highlights_topDays_header"/>
+
+    <hr.tvz.android.whatsappinsights.model.HeaderTextView
+        android:id="@+id/highlights_topEmojis_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/records_top_emojis"
+        app:layout_constraintTop_toBottomOf="@+id/highlights_topDays"
+        tools:layout_editor_absoluteX="16dp" />
+    <TableLayout
+        android:id="@+id/highlights_topEmojis"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/highlights_topEmojis_header"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
