Added scroll for Highlights in landscape mode

--- a/app/src/main/res/layout-land/fragment_insights_records.xml
+++ b/app/src/main/res/layout-land/fragment_insights_records.xml
@@ -23,12 +23,18 @@
                 android:text="@string/records_top_days"
                 android:layout_marginStart="16dp"
                 app:layout_constraintTop_toTopOf="parent"/>
-            <TableLayout
-                android:id="@+id/highlights_topDays"
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
-                app:layout_constraintTop_toBottomOf="@id/highlights_topDays_header"/>
+                app:layout_constraintTop_toBottomOf="@id/highlights_topDays_header"
+                android:paddingBottom="64dp">
+                <TableLayout
+                    android:id="@+id/highlights_topDays"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            </ScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -44,12 +50,17 @@
                 android:text="@string/records_top_emojis"
                 android:layout_marginStart="16dp"
                 app:layout_constraintTop_toTopOf="parent" />
-            <TableLayout
-                android:id="@+id/highlights_topEmojis"
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
-                app:layout_constraintTop_toBottomOf="@id/highlights_topEmojis_header"/>
+                app:layout_constraintTop_toBottomOf="@id/highlights_topEmojis_header"
+                android:paddingBottom="64dp">
+                <TableLayout
+                    android:id="@+id/highlights_topEmojis"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="16dp"/>
+            </ScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
