--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="darkgrey">#AAA</color>
+    <color name="whatsAppLightGreen">#25D366</color>
+    <color name="whatsAppDarkGreen">#075E54</color>
 </resources>
