--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -44,6 +44,7 @@
         android:text="@string/instructions_button_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        style="@style/ReversedButton"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/load_button" />
 
@@ -54,6 +55,7 @@
         android:text="@string/load_previous_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        style="@style/ReversedButton"
         android:layout_margin="10dp"/>
 
 
