--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="0dp"
+        style="@style/ReversedButton"
         app:layout_constraintTop_toBottomOf="@+id/load_button" />
 
     <Button
@@ -54,6 +55,7 @@
         android:text="@string/load_previous_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        style="@style/ReversedButton"
         android:layout_margin="10dp"/>
 
 
